<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DescriptionActivity">

    <TextView
        android:id="@+id/tv_informacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/streamer"
        android:textAlignment="center"
        android:textColor="@color/gray_dark"
        android:textSize="30sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_smart_toy_black_48dp" />

    <TextView
        android:id="@+id/titleDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textColor="@color/gray_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cityDescriptionTextView"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/ciudad"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/statusDescriptionTextView"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/estado"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>